@@ -42,6 +42,7 @@ public abstract class PawnAbstract implements Piece {
             ItsFirstMove = false;
         }
     }
+
     @Override
     public boolean isMoveValid(String start, String end) {
         return (isValidLetter(start, end) && isValidNumber(start, end)) && isFieldsNotOccupied(start, end);
@@ -58,20 +59,19 @@ public abstract class PawnAbstract implements Piece {
             return end.charAt(1) == start.charAt(1) - 1 || (ItsFirstMove && end.charAt(1) == start.charAt(1) - 2);
         }
     }
-
     private boolean isFieldsNotOccupied(String start, String end) {
-        boolean result = false;
         for (String field : getFieldsBetween(start, end)) {
-            if (chessBoardServiceImp.isFieldOccupied(field)) {
-                result = itIsCapture(start, end, field);
-            }else {
-                if (start.charAt(0) == end.charAt(0)) {
-                    result = true;
+            if (start.charAt(0) != end.charAt(0)) {
+                if (chessBoardServiceImp.isFieldOccupied(field)) {
+                    return itIsCorrectCapture(start, end, field);
+                } else  {
+                    return !chessBoardServiceImp.getSavedMoves().isEmpty() && isEnPassantCapture(end, field);
                 }
-                result = !chessBoardServiceImp.getSavedMoves().isEmpty() && isEnPassantCapture(start, end, field);
+            } else if (chessBoardServiceImp.isFieldOccupied(field)) {
+                return false;
             }
         }
-        return result;
+        return true;
     }
 
     private List<String> getFieldsBetween(String startField, String endField) {
@@ -96,7 +96,7 @@ public abstract class PawnAbstract implements Piece {
         return fieldsToValidate;
     }
 
-    private boolean itIsCapture(String start, String end,  String field) {
+    private boolean itIsCorrectCapture(String start, String end, String field) {
         boolean result = false;
         Piece pieceWithMakeMove = chessBoardServiceImp.getPiece(start).get();
         Piece pieceOnField = chessBoardServiceImp.getPiece(field).get();
@@ -105,17 +105,19 @@ public abstract class PawnAbstract implements Piece {
         }
         return result;
     }
-    private boolean isEnPassantCapture(String start, String end, String field) {
+
+    private boolean isEnPassantCapture(String end, String field) {
         boolean result = false;
-        String lastMove= chessBoardServiceImp.getSavedMoves().getLast();
-        String lastMoveStart = lastMove.substring(0,2);
-        String lastMoveEnd = lastMove.substring(2,4);
+        String lastMove = chessBoardServiceImp.getSavedMoves().get(chessBoardServiceImp.getSavedMoves().size() - 1);
+        String lastMoveStart = lastMove.substring(0, 2);
+        String lastMoveEnd = lastMove.substring(2, 4);
         List<String> lastMoveFields = getFieldsBetween(lastMoveStart, lastMoveEnd);
         boolean itWasFirstMoveByTwo = lastMoveFields.size() == 2;
         boolean itWasPawn = chessBoardServiceImp.getPiece(lastMoveEnd).get() instanceof Pawn;
         boolean itWasOpponentPawn = chessBoardServiceImp.getPiece(lastMoveEnd).get().getColor() != color;
         boolean fieldIsBetween = lastMoveFields.indexOf(field) == 0;
-        if (itWasFirstMoveByTwo && itWasPawn && itWasOpponentPawn && fieldIsBetween) {
+        boolean isDestinationFieldEmpty = !chessBoardServiceImp.isFieldOccupied(end);
+        if (itWasFirstMoveByTwo && itWasPawn && itWasOpponentPawn && fieldIsBetween && isDestinationFieldEmpty) {
             result = true;
         }
         return result;
